Various bug fixes
- Clean up VPRewardsGui
- Fix stats in chat
- Add `/hoem` as alias for `/home`
- Fix `/home home` error
- Change `/seen` format
- Add ComponentUtils#format(String style, String format, Object... values)
- Fix `/shutdown stop`